# Whisper

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  ClientData.h  IPv4Addr.cpp  IPv4Addr.h  build.sh  client.cpp  client.h  server.cpp  server.h
src/client/: Client.cpp  Client.h  main.cpp
src/server/: ClientData.h  IPv4Addr.cpp  IPv4Addr.h  Server.cpp  Server.h  main.cpp
